Add documentView, tooltip button to remove or view event, add some comments and cleanup some code

--- a/src/frontend/src/assets/base.css
+++ b/src/frontend/src/assets/base.css
@@ -38,7 +38,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
+    --color-background: var(--vt-c-black-mute);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
@@ -59,7 +59,6 @@
 }
 
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition:
