Add spinner while waiting for response

--- a/src/frontend/src/assets/main.css
+++ b/src/frontend/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 @import 'tailwindcss';
+@import './spinkit.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
